--- a/Bakery/app/src/main/res/layout/activity_main.xml
+++ b/Bakery/app/src/main/res/layout/activity_main.xml
@@ -81,6 +81,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="100dp"
         android:text="Exit"
+        android:action="destroy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
